[gd_scene format=3 uid="uid://boqady5oaxrox"]

[ext_resource type="Script" uid="uid://ddn3gxi0mhxqm" path="res://tree/spown_point.gd" id="1_6m8xa"]
[ext_resource type="Script" uid="uid://k4c1m5xgiomp" path="res://Interactible/interactible.gd" id="2_cmram"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8iukj"]

[node name="SpownPoint" type="Node3D" unique_id=2134861173]
script = ExtResource("1_6m8xa")

[node name="pick_plant" type="Area3D" parent="." unique_id=1373614847]
collision_layer = 256
script = ExtResource("2_cmram")
int_name = "take_item"

[node name="CollisionShape3D" type="CollisionShape3D" parent="pick_plant" unique_id=493419174]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.77664554, 0)
shape = SubResource("CapsuleShape3D_8iukj")

[node name="spawn_area" type="Node3D" parent="." unique_id=2066235121]

[connection signal="interact" from="pick_plant" to="." method="_on_area_3d_interact"]
